# repair

./: README.md
repair_part_source_location/: README.rst  __manifest__.py
repair_part_source_location/models/: __init__.py  repair.py  stock_move.py
repair_part_source_location/readme/: DESCRIPTION.md  USAGE.md
repair_part_source_location/tests/: __init__.py  test_repair_part_source_location.py
repair_part_source_location/views/: repair_views.xml
repair_quality_control/i18n/: it.po
repair_service/: README.rst
repair_service/static/description/: index.html
repair_type/: README.rst
repair_type/i18n/: repair_type.pot
repair_type/static/description/: index.html
setup/_metapackage/: pyproject.toml
